--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#1E88E5;">
+    <meta name="theme-color" content="#1E88E5">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#1E88E5">
+    <meta name="msapplication-navbutton-color" content="#1E88E5">
     <title>Timer</title>
 </head>
 <body>
